fixes style bugs while viewling on mobile

--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -1,5 +1,5 @@
-$mobile-conatiner: 767px; 
-$tablet-container: 1024px; 
+$mobile-conatiner: 760px; // to account for all tablets
+$tablet-container: 1025px; 
 
 
 .main-container {
